# alg-fabbri-IPRJ-UERJ

./: .gitignore  CMakeLists.txt
alg/: AGENTS.md  CMakeLists.txt
alg/bigstring/: CMakeLists.txt  bigstring.cpp  bigstring.h  demo-professor.cpp  example.cpp  test_bigstring.cpp
alg/graph/: CMakeLists.txt  README.md  adjacency_matrix.cpp  dynagraph.c  dynagraph.cpp  test_dynagraph.cpp  tree.cpp  visualizer.html
alg/merge/: sorted_merge_3way.cpp
alg/sort-char/: CMakeLists.txt  sort_char.cpp  sort_char.h
alg/sort-char/benchmark/: CMakeLists.txt  benchmark_sort_char.cpp
alg/sort-char/cmd/: CMakeLists.txt  main.cpp
alg/sort-char/tests/: CMakeLists.txt  test_sort_char.cpp
scripts/: centipede
