cmake_minimum_required(VERSION 3.10)
project(graph)

set(CMAKE_C_STANDARD 99)
set(CMAKE_C_STANDARD_REQUIRED ON)
set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -Wall -Wextra -pedantic")

set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -Wextra -pedantic")

# Execut치vel do dynagraph original (C)
add_executable(dynagraph-c dynagraph.c)

# Execut치vel do dynagraph com C++ e OOP
add_executable(dynagraph dynagraph.cpp)

# Execut치vel de testes para o dynagraph C++
add_executable(test-dynagraph test_dynagraph.cpp)

# Execut치vel do tree (C++)
add_executable(tree tree.cpp)
